@@ -1,3 +1,12 @@
+2003-09-25  Richard Williamson   <rjw@apple.com>
+
+	Fixed 3434854.  Written by Ed.  Correctly handle window modality in carbon.
+
+        Reviewed by Richard.
+
+        * Carbon.subproj/CarbonWindowAdapter.m:
+        (-[CarbonWindowAdapter initWithCarbonWindowRef:takingOwnership:disableOrdering:carbon:]):
+
 2003-09-25  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Darin.
